test/bad/bad46.dj
final class C extends Object {}
class D extends C {} //Error: extension of a "final" class
main {
    0;
}
